--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -1,6 +1,6 @@
 server {
     listen 8080;
-    # server_name horloge-nl.test www.horloge-nl.test;
+    # server_name selim-reza.test www.selim-reza.test;
 
     root /var/www/html/public;
     index index.php index.html;
