--- a/certs/dynamic_conf.yml
+++ b/certs/dynamic_conf.yml
@@ -1,4 +1,4 @@
 tls:
   certificates:
-    - certFile: /certs/horloge-nl-cert.pem
-      keyFile: /certs/horloge-nl-key.pem
+    - certFile: /certs/selim-reza-cert.pem
+      keyFile: /certs/selim-reza-key.pem
